--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(Enigma.Window.Tests main.c)
 target_link_libraries(Enigma.Window.Tests PUBLIC Enigma.Glfw)
 
 include_directories(Enigma.Window.Tests ../src)
+include_directories(Enigma.Window.Tests ../src/glfw/glfwlib/include)
