Create a lot of changes
* Create OpenGL function
* Create UserData functions
* Create ErrorCallback system
* Other lil changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.6)
 
+option(BUILD_TEST "Build test directory" ON)
+
 add_subdirectory(src)
-add_subdirectory(test)
+
+if (BUILD_TEST)
+	add_subdirectory(test)
+endif()
