--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ else()
     add_library(Enigma.Window STATIC ${SOURCES})
 endif()
 target_include_directories(Enigma.Window PRIVATE private/)
-target_include_directories(Enigma.Window INTERFACE ./)
+target_include_directories(Enigma.Window INTERFACE public/)
 
 if (ENIGMA_GLFW)
     add_compile_definitions(ENIGMA_GLFW)
