--- a/src/glfw/CMakeLists.txt
+++ b/src/glfw/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(glfwlib)
 
 set(ENIGMA_GLFW_DLL OFF CACHE BOOL "Build shared lib instead of static" FORCE)
 set(CMAKE_C_STANDARD 99)
-set(SOURCES GlfwWindow.c GlfwWindow.h GlfwModule.c GlfwModule.h)
+set(SOURCES src/GlfwWindow.c src/GlfwModule.c)
 
 if (ENIGMA_GLFW_DLL)
     add_library(Enigma.Glfw SHARED ${SOURCES})
@@ -18,8 +18,7 @@ else()
     add_library(Enigma.Glfw STATIC ${SOURCES})
 endif()
 
-target_include_directories(Enigma.Glfw PRIVATE glfwlib/include)
-target_link_libraries(Enigma.Glfw PRIVATE glfw)
+target_include_directories(Enigma.Glfw PUBLIC include/)
 
-target_include_directories(Enigma.Glfw PUBLIC ../) # include Enigma.Window header
+target_link_libraries(Enigma.Glfw PRIVATE glfw)
 target_link_libraries(Enigma.Glfw PUBLIC Enigma.Window)
