BIG cmake, folder structure and code refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,28 @@
 cmake_minimum_required(VERSION 3.6)
+project(Enigma.Window C)
 
-option(BUILD_TEST "Build test directory" ON)
+set(ENIGMA_WINDOW_DLL OFF CACHE BOOL "Build shared lib instead of static")
+set(CMAKE_C_STANDARD 99)
+set(ENIGMA_GLFW OFF CACHE BOOL "Enable build of Glfw module")
 
-add_subdirectory(src)
+set(SOURCES private/WindowModule.c private/NativeWindow.c private/ErrorCallback.c)
 
-if (BUILD_TEST)
-	add_subdirectory(test)
+if (ENIGMA_WINDOW_DLL)
+    add_library(Enigma.Window SHARED ${SOURCES})
+else()
+    add_library(Enigma.Window STATIC ${SOURCES})
+endif()
+target_include_directories(Enigma.Window PRIVATE private/)
+target_include_directories(Enigma.Window INTERFACE interface/)
+
+set(ENIGMA_WINDOW_BUILD_TESTS ON CACHE BOOL "Build tests for Enigma.Window")
+if (ENIGMA_WINDOW_BUILD_TESTS)
+    message(STATUS "Build tests of Enigma.Window")
+    add_subdirectory(test)
+endif()
+
+if (ENIGMA_GLFW)
+    message(STATUS "Build Enigma.Glfw module")
+    add_compile_definitions(ENIGMA_GLFW)
+    add_subdirectory(glfw)
 endif()
