--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.6)
 project(Enigma.Window.Tests C)
 
 set(CMAKE_C_STANDARD 99)
+set(ENIGMA_GLFW ON PARENT_SCOPE)
 
 add_executable(Enigma.Window.Tests main.c)
 
-target_link_libraries(Enigma.Window.Tests PUBLIC Enigma.Glfw)
-
-target_include_directories(Enigma.Window.Tests PUBLIC ../src)
-target_include_directories(Enigma.Window.Tests PUBLIC ../src/glfw/glfwlib/include)
+target_link_libraries(Enigma.Window.Tests PRIVATE Enigma.Glfw)
