--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/glfw/glfwlib"]
-	path = src/glfw/glfwlib
+[submodule "glfw/glfwlib"]
+	path = glfw/glfwlib
 	url = https://github.com/glfw/glfw.git
